Can't use 'position: fixed' on mobiles - #298.

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -271,6 +271,15 @@ Default Bootstrap 4 Media Queries
 }
 
 /*=====================================================
+768px
+======================================================= */
+@media (min-width: 768px) {
+    body.drawer-open-left {
+        margin-left: 0;
+    }
+}
+
+/*=====================================================
 979px
 ======================================================= */
 @media (max-width: 979px) {
